fixed spacing and titles

--- a/module2-solution/css/styles.css
+++ b/module2-solution/css/styles.css
@@ -12,12 +12,17 @@ h1 {
   font-size: 1.75em;
 }
 
-.section {
-  position: relative;
-  border: 1px solid black;
-  background-color: grey;
+p {
+  width: 95%;
   padding-top: 30px;
   margin-bottom: 10px;
+  border: 1px solid black;
+  background-color: grey;
+  position: relative;
+}
+
+.section {
+  position: relative;
 }
 
 #title1 {
@@ -25,8 +30,11 @@ h1 {
   border: 1px solid black;
   background-color: royalblue;
   top: 0;
-  right: 0;
+  right: 5%;
   font-size: 1.25em;
+  text-align: center;
+  padding: 0;
+  width: 50%;
 }
 
 #title2 {
@@ -34,8 +42,11 @@ h1 {
   border: 1px solid black;
   background-color: goldenrod;
   top: 0;
-  right: 0;
+  right: 5%;
   font-size: 1.25em;
+  text-align: center;
+  padding: 0;
+  width: 50%;
 }
 
 #title3 {
@@ -43,38 +54,99 @@ h1 {
   border: 1px solid black;
   background-color: red;
   top: 0;
-  right: 0;
+  right: 5%;
   font-size: 1.25em;
+  text-align: center;
+  padding: 0;
+  width: 50%;
 }
 
-/* mobile view */
-@media (max-width: 767px) {
- .col-sm {
-   border: 1px solid black;
-   float: left;
-   width: 100%;
- }
+.row {
+  width: 100%;
 }
 
 /* tablet view  */
 @media (min-width: 768px) and (max-width: 991px) {
-  .col-md-1, .col-md-2, .col-md-3 {
-    border: 1px solid black;
+  .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
     float: left;
   }
   .col-md-1 {
-    width: 50%;
+    width: 8.33%;
   }
   .col-md-2 {
+    width: 16.66%;
+  }
+  .col-md-3 {
+    width: 25%;
+  }
+  .col-md-4 {
+    width: 33.33%;
+  }
+  .col-md-5 {
+    width: 41.66%;
+  }
+  .col-md-6 {
+    width: 50%;
+  }
+  .col-md-7 {
+    width: 58.33%;
+  }
+  .col-md-8 {
+    width: 66.66%;
+  }
+  .col-md-9 {
+    width: 74.99%;
+  }
+  .col-md-10 {
+    width: 83.33%;
+  }
+  .col-md-11 {
+    width: 91.66%;
+  }
+  .col-md-12 {
     width: 100%;
   }
 }
 
 /* desktop view  */
 @media (min-width: 992px) {
-  .col-lg {
-    border: 1px solid black;
+  .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
     float: left;
+  }
+  .col-lg-1 {
+    width: 8.33%;
+  }
+  .col-lg-2 {
+    width: 16.66%;
+  }
+  .col-lg-3 {
+    width: 25%;
+  }
+  .col-lg-4 {
     width: 33.33%;
+  }
+  .col-lg-5 {
+    width: 41.66%;
+  }
+  .col-lg-6 {
+    width: 50%;
+  }
+  .col-lg-7 {
+    width: 58.33%;
+  }
+  .col-lg-8 {
+    width: 66.66%;
+  }
+  .col-lg-9 {
+    width: 74.99%;
+  }
+  .col-lg-10 {
+    width: 83.33%;
+  }
+  .col-lg-11 {
+    width: 91.66%;
+  }
+  .col-lg-12 {
+    width: 100%;
   }
 }
